# MEE5002

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/section/: appendix.md  background.md  close.md  conclusion.md  execute.md  initiate.md  monitor.md  plan.md  reference.md
examples/: README.md
scripts/: tinypng.py
wiki/: README.md  ideas.md  tools.md
