[tool.poetry]
name = "MEE5002"
version = "1.0"
description = "项目管理基础与实践"
authors = [
  "Iydon Liang  <12132274@mail.sustech.edu.cn>",
  "Hui Gao      <12132508@mail.sustech.edu.cn>",
  "Peiyao Wang  <12132298@mail.sustech.edu.cn>",
  "Shixiang Liu <12132279@mail.sustech.edu.cn>",
  "Yufan Xiao   <12132306@mail.sustech.edu.cn>",
  "Yong Guo     <12132258@mail.sustech.edu.cn>",
  "Zhiyuan Wang <12132300@mail.sustech.edu.cn>"
]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
markdown-katex = "^202112.1034"
mkdocs-print-site-plugin = "^2.2"
mkdocs-mermaid2-plugin = "^0.5.2"
mkdocs-markmap = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
